# python-sopnet

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README  README.md  compile_wrapper.sh  packagelist-ubuntu-12.04-apt.txt  packagelist-ubuntu-14.04-apt.txt  setup.py
binaries/: CMakeLists.txt  coresolvertest.cpp  larry.cpp  linear_solver_test.cpp
binaries/tests/: BlockManagerTest.cpp  BlockManagerTest.h  CMakeLists.txt  CatsopTest.cpp  CatsopTest.h  DjangoGenerators.cpp  DjangoGenerators.h  DjangoTestSuite.cpp  DjangoTestSuite.h  LocalTestSuite.cpp  LocalTestSuite.h  SegmentStoreTest.cpp  SegmentStoreTest.h  SliceStoreTest.cpp  SliceStoreTest.h  componenttreewriter.cpp  test_postgres_stores.cpp
horst/: .gitignore  CMakeLists.txt
horst/binaries/: CMakeLists.txt  create_project.cpp  dojo_export.cpp  extract_features.cpp  extract_tubes.cpp  host.cpp  raveler_export.cpp  tube_viewer.cpp
horst/graph/: Arc.h  ArcMaps.h  CMakeLists.txt  Edge.h  Graph.h  GraphBase.h  Logging.cpp  Logging.h  Node.h  RandomWeightedGraphGenerator.cpp  RandomWeightedGraphGenerator.h  WeightedGraphGenerator.h
horst/inference/: ArcTerm.h  CMakeLists.txt  CandidateConflictTerm.cpp  CandidateConflictTerm.h  Configuration.h  ExclusiveArcsTerm.h  ExclusiveEdgesInteraction.h  ExclusiveEdgesTerm.h  ExplicitWeightTerm.h  HigherOrderArcTerm.h  HostSearch.cpp  HostSearch.h  Lambdas.h  MultiArcFactorTerm.cpp  MultiArcFactorTerm.h  MultiArcFactors.h  MultiEdgeFactorTerm.h  MultiEdgeFactors.h  ProximalBundleMethod.cpp  ProximalBundleMethod.h
horst/io/: CMakeLists.txt  MultiEdgeFactorReader.cpp  MultiEdgeFactorReader.h  WeightedGraphReader.cpp  WeightedGraphReader.h  WeightedGraphWriter.h
horst/tests/: CMakeLists.txt  tests.cpp  tests.h  testsuite.cpp
horst/tubes/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  Features.h  GraphVolumes.h  LooseEnd.h  LooseEnds.cpp  LooseEnds.h  SkeletonExtractor.cpp  SkeletonExtractor.h  Skeletons.h  TubeExtractor.cpp  TubeExtractor.h  TubeId.h  TubeIds.h  TubePropertyMap.h  Volumes.h
horst/volumes/: CMakeLists.txt  ExtractLabels.cpp  ExtractLabels.h
modules/: CMakeLists.txt
pysopnet/: BackendClient.cpp  BackendClient.h  CMakeLists.txt  GroundTruthGuarantor.cpp  GroundTruthGuarantor.h  GroundTruthGuarantorParameters.h  Locations.h  ProjectConfiguration.cpp  ProjectConfiguration.h  SegmentGuarantor.cpp  SegmentGuarantor.h  SegmentGuarantorParameters.h  SliceGuarantor.cpp  SliceGuarantor.h  SliceGuarantorParameters.h  SolutionGuarantor.cpp  SolutionGuarantor.h  SolutionGuarantorParameters.h  __init__.py  logging.cpp  logging.h  pysopnet.cpp
python/: CMakeLists.txt  ProjectConfiguration.cpp  ProjectConfiguration.h  SliceGuarantor.cpp  SliceGuarantor.h  SliceGuarantorParameters.h  logging.cpp  logging.h  pysopnet.cpp
sopnet/: CMakeLists.txt
sopnet/binaries/: CMakeLists.txt  coresolvertest.cpp  extract_local_labels.cpp
sopnet/blockwise/: CMakeLists.txt  ProjectConfiguration.cpp  ProjectConfiguration.h
test/python/: raw  (+2 more)
(+342 files in other folders)
